# cairo-erc20-runner

./: .gitignore  Cargo.toml  README.md  erc20.args
cairo-erc20/: Scarb.toml  erc20.args
cairo-erc20/src/: lib.cairo
cairo-reco-smile/src/: lib.cairo
noir-webauthn/: Nargo.toml  Prover.toml  Verifier.toml
noir-webauthn/prover/: customProver.ts  getAddressFromPubKey.ts  hyle_custom_prover.ts
noir-webauthn/src/: main.nr  utils.nr
src/: main.rs  utils.rs
src/utils/: error.rs
