[package]
name = "cairo_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-compiler = { version = "2.6.3", default-features = false }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "bf275577" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "bf275577", features = [
     "std",
]}
clap = { version = "4.3.10", features = ["derive"] }
serde_json = "1.0.111"
bincode = { version = "2.0.0-rc.3", default-features = false }